<resources>
    <string name="app_name">Travelmantics</string>
    <string name="item_name">Name</string>
    <string name="item_name_hint">Deal Title</string>
    <string name="price_hint">Price(number only)</string>
    <string name="description_hint">Description</string>
    <string name="save_menu_text">Save</string>
    <string name="card_image_desc">card image</string>
    <string name="new_trave_deal_option_text">New Trave Deal</string>
    <string name="logout_text">Logout</string>
    <string name="upload_image_text">UPLOAD IMAGE</string>
    <string name="description_example">Awesome wonders of a typical Nigeria woman. She is black and beautiful</string>
    <string name="price_example">800</string>
    <string name="title_example">Nigerian Summer Tour</string>
</resources>
